# ArabicTranslation_API

./: README.md  babla  db.sqlite3  pyproject.toml
apis/: serializers.py  urls.py  views.py
arabic_keyword_api/: admin.py  apps.py  babla  babla.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
arabic_keyword_api/migrations/: 0001_initial.py  0002_alter_keyword_id.py  0002_keyword_key_text_out_alter_keyword_id.py  0003_keyword_key_out_text.py  0003_keyword_keyword_translations_and_more.py  0003_remove_keyword_key_text_out_and_more.py
todo_app/: settings.py  urls.py
todos/: models.py
web/: celery.py  settings.py  urls.py
